# calculator

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
